objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Age_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appt_No_Show_Cancel_Reason__c</fullName>
        <label>Appt No Show/Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_a_Realtor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you a Realtor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_transferring_to_the_area__c</fullName>
        <label>Are you transferring to the area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_In__c</fullName>
        <label>Area of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cedar Park / Leander</fullName>
                </value>
                <value>
                    <fullName>Central &amp; East Austin</fullName>
                </value>
                <value>
                    <fullName>Dripping Springs</fullName>
                </value>
                <value>
                    <fullName>Georgetown / Liberty Hill</fullName>
                </value>
                <value>
                    <fullName>Lakeway / Bee Cave</fullName>
                </value>
                <value>
                    <fullName>San Marcos</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Ann Arundel</fullName>
                </value>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
                <value>
                    <fullName>Frederick</fullName>
                </value>
                <value>
                    <fullName>Loudoun</fullName>
                </value>
                <value>
                    <fullName>Montgomery</fullName>
                </value>
                <value>
                    <fullName>Prince William</fullName>
                </value>
                <value>
                    <fullName>Sussex</fullName>
                </value>
                <value>
                    <fullName>Talbot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Sales_Assistants__c</fullName>
        <label>Assigned Sales Assistants</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alexis Hall</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Cathy Chadwick</fullName>
                </value>
                <value>
                    <fullName>Chandler Meadows</fullName>
                </value>
                <value>
                    <fullName>Diane Tidwell</fullName>
                </value>
                <value>
                    <fullName>Deborah Powell</fullName>
                </value>
                <value>
                    <fullName>Gina Iaccino</fullName>
                </value>
                <value>
                    <fullName>Jill Brodsky</fullName>
                </value>
                <value>
                    <fullName>Melissa Stein</fullName>
                </value>
                <value>
                    <fullName>Paige Kamel</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Rauly Williams</fullName>
                </value>
                <value>
                    <fullName>Sue Walker</fullName>
                </value>
                <value>
                    <fullName>Tonya McKim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label>Bathrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bathrooms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bedrooms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Aus__c</fullName>
        <label>Community History Aus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Cal__c</fullName>
        <label>Community History Cal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Den__c</fullName>
        <label>Community History Den</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Edm__c</fullName>
        <label>Community History Edm</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_NorCal__c</fullName>
        <label>Community History NorCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_SoCal__c</fullName>
        <label>Community History SoCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Test__c</fullName>
        <label>Community History Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test_Marketing_Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Tor__c</fullName>
        <label>Community History Tor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_History_Wash__c</fullName>
        <label>Community History Wash</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Aus__c</fullName>
        <label>Community List Aus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Cal__c</fullName>
        <label>Community List Cal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Den__c</fullName>
        <label>Community List Den</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Edm__c</fullName>
        <label>Community List Edm</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_NorCal__c</fullName>
        <label>Community List NorCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_SoCal__c</fullName>
        <label>Community List SoCal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Test__c</fullName>
        <label>Community List Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test_Marketing_Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Tor__c</fullName>
        <label>Community List Tor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_List_Wash__c</fullName>
        <label>Community List Wash</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Aus__c</fullName>
        <label>Community Picklist Aus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Aus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Cal__c</fullName>
        <label>Community Picklist Cal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Cal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Den__c</fullName>
        <label>Community Picklist Den</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Den</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Edm__c</fullName>
        <label>Community Picklist Edm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Edm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_NorCal__c</fullName>
        <label>Community Picklist NorCal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_NorCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_SoCal__c</fullName>
        <label>Community Picklist SoCal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_SoCal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Test__c</fullName>
        <label>Community Picklist Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test_Marketing_Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Tor__c</fullName>
        <label>Community Picklist Tor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Tor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Picklist_Wash__c</fullName>
        <label>Community Picklist Wash</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist_Wash</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Expiry_Date__c</fullName>
        <label>Consent Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Notes__c</fullName>
        <label>Consent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Received_Date__c</fullName>
        <label>Consent Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Revocation_Received_Date__c</fullName>
        <label>Consent Revocation Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Revoked_Date__c</fullName>
        <label>Consent Revoked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consent_Type__c</fullName>
        <label>Consent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consent_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_to_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consent to Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Preference</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedUser__c</fullName>
        <label>CreatedUser</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Appointment__c</fullName>
        <label>Date of First Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_own_or_rent__c</fullName>
        <label>Do you currently own or rent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under $50,000</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $74,999</fullName>
                </value>
                <value>
                    <fullName>$75,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $299,999</fullName>
                </value>
                <value>
                    <fullName>$300,000 - $399,999</fullName>
                </value>
                <value>
                    <fullName>$400,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Was_Consent_Received__c</fullName>
        <label>How Was Consent Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>How_Was_Consent_Received</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_house_hunting__c</fullName>
        <label>How long have you been house hunting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 Month</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6+ Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internet_Sales_Rep__c</fullName>
        <label>Online Sales Counselor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_in_Home__c</fullName>
        <label>Number of Children in Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Number__c</fullName>
        <inlineHelpText>Number of Pets</inlineHelpText>
        <label>Pet - Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>more than 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Type__c</fullName>
        <inlineHelpText>Type of Pets</inlineHelpText>
        <label>Pet - Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Day_s_to_Visit__c</fullName>
        <label>Preferred Day(s) to Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Day_s_to_Visit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Time_s_to_Visit__c</fullName>
        <label>Preferred Time(s) to Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Time_s_to_Visit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_By_Email__c</fullName>
        <label>Referred By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referred_By_First_Name__c</fullName>
        <label>Referred By First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Last_Name__c</fullName>
        <label>Referred By Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Phone__c</fullName>
        <label>Referred By Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Repeat_Buyer__c</fullName>
        <label>Repeat Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent_s_Working__c</fullName>
        <label>Sales Agent(s) Working</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aleks Korowski</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Angie Cole</fullName>
                </value>
                <value>
                    <fullName>Angie Miller</fullName>
                </value>
                <value>
                    <fullName>Belinda Shuler</fullName>
                </value>
                <value>
                    <fullName>Brian Blair</fullName>
                </value>
                <value>
                    <fullName>Colin Sexton</fullName>
                </value>
                <value>
                    <fullName>David Matthys</fullName>
                </value>
                <value>
                    <fullName>Dori Conway</fullName>
                </value>
                <value>
                    <fullName>James Haugen</fullName>
                </value>
                <value>
                    <fullName>Janice Wunning</fullName>
                </value>
                <value>
                    <fullName>Kendra Johnson</fullName>
                </value>
                <value>
                    <fullName>Kevin Bendy</fullName>
                </value>
                <value>
                    <fullName>Lara Ingalsbe</fullName>
                </value>
                <value>
                    <fullName>Linda Lahrman</fullName>
                </value>
                <value>
                    <fullName>Lou Niemeyer</fullName>
                </value>
                <value>
                    <fullName>Marc Bodley</fullName>
                </value>
                <value>
                    <fullName>Matt Schroeder</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Richard Romeo</fullName>
                </value>
                <value>
                    <fullName>Steve Chase</fullName>
                </value>
                <value>
                    <fullName>Tina Spencer</fullName>
                </value>
                <value>
                    <fullName>Vern Carlson</fullName>
                </value>
                <value>
                    <fullName>Jesse Miller</fullName>
                </value>
                <value>
                    <fullName>Joelle Hogg</fullName>
                </value>
                <value>
                    <fullName>Michael Wagner</fullName>
                </value>
                <value>
                    <fullName>Nichole Knight</fullName>
                </value>
                <value>
                    <fullName>Stephanie McKinney</fullName>
                </value>
                <value>
                    <fullName>Sylvia Ingalsbe</fullName>
                </value>
                <value>
                    <fullName>Dustin Compton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Roll-up of Oppty Stages:
If ALL Oppty Stage = Prospecting
If All Oppty Stage between Engagement: Under Contract, use Oppty Stage furthest along 
If All Oppty Stage = Lost/Cancelled, at least one cancelled oppty, use most recent cancellation reason
If All Oppty Stage = Lost, use last Loss Reason
If any Oppty Stage = Closed Home (may still have active oppty records)</description>
        <inlineHelpText>Roll-up of Opportunity Stages</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <default>true</default>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Quote/Selection</fullName>
                </value>
                <value>
                    <fullName>Quote Closed</fullName>
                </value>
                <value>
                    <fullName>Contract Ready</fullName>
                </value>
                <value>
                    <fullName>Lot Reservation</fullName>
                </value>
                <value>
                    <fullName>Pending Offer</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe_to_move_in__c</fullName>
        <label>Timeframe to move-in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>1-3 Month</fullName>
                </value>
                <value>
                    <fullName>3-6 Month</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>1-2 Years</fullName>
                </value>
                <value>
                    <fullName>2+ Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeframe_to_purchase__c</fullName>
        <label>Timeframe to purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Day</fullName>
                </value>
                <value>
                    <fullName>1-3 Month</fullName>
                </value>
                <value>
                    <fullName>3-6 Month</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>1-2 Years</fullName>
                </value>
                <value>
                    <fullName>2+ Years</fullName>
                </value>
                <value>
                    <fullName>0-6 Months</fullName>
                    <isActive>false</isActive>
                    <label>0-6 Months</label>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                    <isActive>false</isActive>
                    <label>1 Year</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <inlineHelpText>Enter the date prospect expects to move in, purchase, close, etc. Then make a note on as to what this timing is in reference to.</inlineHelpText>
        <label>Timing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transferring_to_area_date__c</fullName>
        <inlineHelpText>If lead is transferring to the area, enter date they expect to transfer.</inlineHelpText>
        <label>Transferring to area date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Brookfield_website_during_search__c</fullName>
        <label>Visit Brookfield website during search?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Date of First Visit</label>
        <type>Date</type>
    </fields>
</CustomObject>